Prevented tag text from wrapping in the tags UI, fixes #741.

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -495,6 +495,7 @@ ul#view-header li {
     text-decoration:none;
     font-weight:bold;
     float:left;
+    white-space: nowrap;
 }
 
 #alternate-page #tag-galaxy div.tag a:hover {
